# etc/Makefile.am - ginn configuration build recipe

pkgconfdir = ${sysconfdir}/ginn
upstartdir = ${datadir}/upstart/sessions
xdgconfdir = ${sysconfdir}/xdg/autostart

# install as a template
dist_pkgdata_DATA = wishes.xml ginn.rng

# install as a conffile
dist_pkgconf_DATA = wishes.xml

dist_upstart_DATA = ginn.conf

