# etc/Makefile.am - ginn configuration build recipe

pkgconfdir = ${sysconfdir}/ginn
xdgconfdir = ${sysconfdir}/xdg/autostart

# install as a template
dist_pkgdata_DATA = wishes.xml

# install as a conffile
dist_pkgconf_DATA = wishes.xml

# FIXME: don't run ginn at session startup, it can interfere with Unity gestures
#dist_xdgconf_DATA = ginn.desktop

